2014-05-28  Emiliano Gabriel Canedo  <emilianocanedo@gmail.com>

	* ComboBoxHelpers.cs:
	* SearchableComboBox.cs:
	* SearchableComboBoxEntry.cs: 

2014-05-28  Emiliano Gabriel Canedo  <emilianocanedo@gmail.com>

	* Program.cs:
	* MainWindow.cs:
	* GeneralHelpers.cs:
	* NodeViewHelpers.cs:
	* Hamekoz.UI.Gtk.csproj: 
